fix: collapse simple estilos de h4

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -809,15 +809,13 @@ button.card {
       z-index: 1;
       color: $white;
       min-height: 48px;
-      line-height: 1.4;
-      font-size: 18px;
-      font-weight: 700;
       display: grid;
       grid-template-columns: 1fr auto;
       grid-template-rows: auto;
       grid-column-gap: 0.75rem;
       grid-row-gap: 0;
       align-items: center;
+      @extend .h4;
 
       &:after {
         grid-area: 1 / 2 / 3 / 3;
